# dysarthric-TTS

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
data_prepare/: audio_utils.py  check_alignment.ipynb  get_ddk_transcription.py  get_monologue_transcription.py  merge_words.py  split_sentences.ipynb  split_sentences.py  split_sentences_stats.ipynb  stats.py  utils.py
specs/001-segment-pcgita-sentences/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-segment-pcgita-sentences/checklists/: requirements.md
specs/002-ddk-transcription/: plan.md  spec.md  tasks.md
tests/data_prepare/: test_splitting.py
tests/data_prepare/dummy_data/: 001PD_S1_readtext.txt  041YHC_S1_readtext.txt
tests/data_prepare/dummy_data/ali_phoneme/: 001PD_S1_readtext.csv  041YHC_S1_readtext.csv
